--- a/src/gallery/index.pug
+++ b/src/gallery/index.pug
@@ -1,6 +1,9 @@
 doctype html
 html
 	head
+		meta(charset="UTF-8")
+		meta(name="decritpion",content="Galerija Suvenira i Modela")
+        meta(name="author", content="Jovan Petković")
 		title Galerija
 	body
 		.navigation
@@ -187,6 +190,58 @@ html
 				button(data-id="piksle24").item
 				button(data-id="piksle25").item
 				button(data-id="piksle26").item
+		.section#crkve
+			.cover
+				h1 Crkve
+			.gallery
+				button(data-id="crkve1").item
+				button(data-id="crkve2").item
+				button(data-id="crkve3").item
+				button(data-id="crkve4").item
+				button(data-id="crkve5").item
+				button(data-id="crkve6").item
+				button(data-id="crkve7").item
+		.section#magneti
+			.cover
+				h1 Magneti
+			.gallery
+				button(data-id="magneti1").item
+				button(data-id="magneti2").item
+				button(data-id="magneti3").item
+				button(data-id="magneti4").item
+				button(data-id="magneti5").item
+				button(data-id="magneti6").item
+				button(data-id="magneti7").item
+				button(data-id="magneti8").item
+				button(data-id="magneti9").item
+				button(data-id="magneti10").item
+				button(data-id="magneti11").item
+				button(data-id="magneti12").item
+				button(data-id="magneti13").item
+				button(data-id="magneti14").item
+		.section#izrada
+			.cover
+				h1 Izrada
+			.gallery
+				button(data-id="izrada1").item
+				button(data-id="izrada2").item
+				button(data-id="izrada3").item
+				button(data-id="izrada4").item
+				button(data-id="izrada5").item
+				button(data-id="izrada6").item
+				button(data-id="izrada7").item
+				button(data-id="izrada8").item
+				button(data-id="izrada9").item
+				button(data-id="izrada10").item
+				button(data-id="izrada11").item
+				button(data-id="izrada12").item
+				button(data-id="izrada13").item
+				button(data-id="izrada14").item
+				button(data-id="izrada15").item
+				button(data-id="izrada16").item
+				button(data-id="izrada17").item
+				button(data-id="izrada18").item
+				button(data-id="izrada19").item
 		.modalbox
 			button#exit
 			img(src='images/etno/1.jpg').item#etnomodeli1
@@ -356,3 +411,43 @@ html
 			img(src='images/piksle/24.jpg').item#piksle24
 			img(src='images/piksle/25.jpg').item#piksle25
 			img(src='images/piksle/26.jpg').item#piksle26
+			img(src='images/crkve/1.jpg').item#crkve1
+			img(src='images/crkve/2.jpg').item#crkve2
+			img(src='images/crkve/3.jpg').item#crkve3
+			img(src='images/crkve/4.jpg').item#crkve4
+			img(src='images/crkve/5.jpg').item#crkve5
+			img(src='images/crkve/6.jpg').item#crkve6
+			img(src='images/crkve/7.jpg').item#crkve7
+			img(src='images/magneti/1.jpg').item#magneti1
+			img(src='images/magneti/2.jpg').item#magneti2
+			img(src='images/magneti/3.jpg').item#magneti3
+			img(src='images/magneti/4.jpg').item#magneti4
+			img(src='images/magneti/5.jpg').item#magneti5
+			img(src='images/magneti/6.jpg').item#magneti6
+			img(src='images/magneti/7.jpg').item#magneti7
+			img(src='images/magneti/8.jpg').item#magneti8
+			img(src='images/magneti/9.jpg').item#magneti9
+			img(src='images/magneti/10.jpg').item#magneti10
+			img(src='images/magneti/11.jpg').item#magneti11
+			img(src='images/magneti/12.jpg').item#magneti12
+			img(src='images/magneti/13.jpg').item#magneti13
+			img(src='images/magneti/14.jpg').item#magneti14
+			img(src='images/izrada/1.jpg').item#izrada1
+			img(src='images/izrada/2.jpg').item#izrada2
+			img(src='images/izrada/3.jpg').item#izrada3
+			img(src='images/izrada/4.jpg').item#izrada4
+			img(src='images/izrada/5.jpg').item#izrada5
+			img(src='images/izrada/6.jpg').item#izrada6
+			img(src='images/izrada/7.jpg').item#izrada7
+			img(src='images/izrada/8.jpg').item#izrada8
+			img(src='images/izrada/9.jpg').item#izrada9
+			img(src='images/izrada/10.jpg').item#izrada10
+			img(src='images/izrada/11.jpg').item#izrada11
+			img(src='images/izrada/12.jpg').item#izrada12
+			img(src='images/izrada/13.jpg').item#izrada13
+			img(src='images/izrada/14.jpg').item#izrada14
+			img(src='images/izrada/15.jpg').item#izrada15
+			img(src='images/izrada/16.jpg').item#izrada16
+			img(src='images/izrada/17.jpg').item#izrada17
+			img(src='images/izrada/18.jpg').item#izrada18
+			img(src='images/izrada/19.jpg').item#izrada19
