--- a/src/gallery/sass/section.sass
+++ b/src/gallery/sass/section.sass
@@ -378,7 +378,87 @@
 			background-image: url(../imagesmini/piksle/25.jpg)
 		button[data-id="piksle26"]
 			background-image: url(../imagesmini/piksle/26.jpg)
-#etno
+		button[data-id="crkve1"]
+			background-image: url(../imagesmini/crkve/1.jpg)
+		button[data-id="crkve2"]
+			background-image: url(../imagesmini/crkve/2.jpg)
+		button[data-id="crkve3"]
+			background-image: url(../imagesmini/crkve/3.jpg)
+		button[data-id="crkve4"]
+			background-image: url(../imagesmini/crkve/4.jpg)
+		button[data-id="crkve5"]
+			background-image: url(../imagesmini/crkve/5.jpg)
+		button[data-id="crkve6"]
+			background-image: url(../imagesmini/crkve/6.jpg)
+		button[data-id="crkve7"]
+			background-image: url(../imagesmini/crkve/7.jpg)
+		button[data-id="magneti1"]
+			background-image: url(../imagesmini/magneti/1.jpg)
+		button[data-id="magneti2"]
+			background-image: url(../imagesmini/magneti/2.jpg)
+		button[data-id="magneti3"]
+			background-image: url(../imagesmini/magneti/3.jpg)
+		button[data-id="magneti4"]
+			background-image: url(../imagesmini/magneti/4.jpg)
+		button[data-id="magneti5"]
+			background-image: url(../imagesmini/magneti/5.jpg)
+		button[data-id="magneti6"]
+			background-image: url(../imagesmini/magneti/6.jpg)
+		button[data-id="magneti7"]
+			background-image: url(../imagesmini/magneti/7.jpg)
+		button[data-id="magneti8"]
+			background-image: url(../imagesmini/magneti/8.jpg)
+		button[data-id="magneti9"]
+			background-image: url(../imagesmini/magneti/9.jpg)
+		button[data-id="magneti10"]
+			background-image: url(../imagesmini/magneti/10.jpg)
+		button[data-id="magneti11"]
+			background-image: url(../imagesmini/magneti/11.jpg)
+		button[data-id="magneti12"]
+			background-image: url(../imagesmini/magneti/12.jpg)
+		button[data-id="magneti13"]
+			background-image: url(../imagesmini/magneti/13.jpg)
+		button[data-id="magneti14"]
+			background-image: url(../imagesmini/magneti/14.jpg)
+		button[data-id="izrada1"]
+			background-image: url(../imagesmini/izrada/1.jpg)
+		button[data-id="izrada2"]
+			background-image: url(../imagesmini/izrada/2.jpg)
+		button[data-id="izrada3"]
+			background-image: url(../imagesmini/izrada/3.jpg)
+		button[data-id="izrada4"]
+			background-image: url(../imagesmini/izrada/4.jpg)
+		button[data-id="izrada5"]
+			background-image: url(../imagesmini/izrada/5.jpg)
+		button[data-id="izrada6"]
+			background-image: url(../imagesmini/izrada/6.jpg)
+		button[data-id="izrada7"]
+			background-image: url(../imagesmini/izrada/7.jpg)
+		button[data-id="izrada8"]
+			background-image: url(../imagesmini/izrada/8.jpg)
+		button[data-id="izrada9"]
+			background-image: url(../imagesmini/izrada/9.jpg)
+		button[data-id="izrada10"]
+			background-image: url(../imagesmini/izrada/10.jpg)
+		button[data-id="izrada11"]
+			background-image: url(../imagesmini/izrada/11.jpg)
+		button[data-id="izrada12"]
+			background-image: url(../imagesmini/izrada/12.jpg)
+		button[data-id="izrada13"]
+			background-image: url(../imagesmini/izrada/13.jpg)
+		button[data-id="izrada14"]
+			background-image: url(../imagesmini/izrada/14.jpg)
+		button[data-id="izrada15"]
+			background-image: url(../imagesmini/izrada/15.jpg)
+		button[data-id="izrada16"]
+			background-image: url(../imagesmini/izrada/16.jpg)
+		button[data-id="izrada17"]
+			background-image: url(../imagesmini/izrada/17.jpg)
+		button[data-id="izrada18"]
+			background-image: url(../imagesmini/izrada/18.jpg)
+		button[data-id="izrada19"]
+			background-image: url(../imagesmini/izrada/19.jpg)
+#etnomodeli
 	.cover
 		background:
 			image: url(../images/etno/cover.jpg)
@@ -394,3 +474,15 @@
 	.cover
 		background: 
 			image: url(../images/piksle/cover.jpg)
+#crkve
+	.cover
+		background:
+			image: url(../images/crkve/cover.jpg)
+#magneti
+	.cover
+		background:
+			image: url(../images/magneti/cover.jpg)
+#izrada
+	.cover
+		background:
+			image: url(../images/izrada/cover.jpg)
