--- a/src/index/index.pug
+++ b/src/index/index.pug
@@ -2,6 +2,8 @@ doctype
 html
     head
         meta(charset="utf-8")
+        meta(name="decritpion",content="Suveniri i Modeli")
+        meta(name="author", content="Jovan Petković")
         title Suveniri i Modeliranje
         link(href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet")
@@ -12,7 +14,7 @@ html
                     .nav
                         button suveniri
                         button modeliranje
-                        a(href="#galerija", target="_blank") galerija
+                        a(href="../gallery/index.html", target="_blank") galerija
                         button kontakt
                     ul
                         li
@@ -43,7 +45,7 @@ html
                     button(data-id="suveniri2").item
                     button(data-id="suveniri3").item
                     button(data-id="suveniri4").item
-                    a(href="#galerija", target="_blank").item
+                    a(href="../gallery/index.html", target="_blank").item
                         .galerija
                             h2 Galerija
                             h2 Suvenira
@@ -64,6 +66,7 @@ html
                             .block
                                 h2 Suveniri:
                                 h3 Danijela 0669602144
+                                h3 Danijela 062662160
                             .block    
                                 h2 Modeliranje:
                                 h3 Zoran 0644735719
@@ -75,7 +78,7 @@ html
                     button(data-id="modeliranje2").item
                     button(data-id="modeliranje3").item
                     button(data-id="modeliranje4").item
-                    a(href="#galerija", target="_blank").item
+                    a(href="../gallery/index.html", target="_blank").item
                         .galerija
                             h2 Galerija
                             h2 Modela
@@ -85,6 +88,7 @@ html
                     .contactblock
                         h2 Suveniri:
                         h3 Danijela 0669602144
+                        h3 Danijela 062662160
                     .contactblock
                         h2 Modeliranje:
                         h3 Zoran 0644735719
