--- a/src/index/sass/presentation.sass
+++ b/src/index/sass/presentation.sass
@@ -1,7 +1,7 @@
 .presentation
     height: calc(100vh - 50px)
     overflow: hidden
-    background-size: 100% 100%
+    background-size: 100% auto
     background-repeat: no-repeat
     .cover
         position: relative
