--- a/src/index/sass/slider.sass
+++ b/src/index/sass/slider.sass
@@ -2,7 +2,17 @@ body,html
     margin: 0
     padding: 0
     overflow-x: hidden
-    background-color: #DADADA
+@keyframes bounce
+    20%
+        bottom: 40px
+    30%
+        bottom: 0px
+    40%
+        bottom: 10px
+    50%
+        bottom: 0px
+    100%
+        bottom: 0px
 .landing
     height: 100vh
     display: flex
@@ -10,27 +20,6 @@ body,html
     .slider
         position: relative
         flex: 1
-        .nav
-            z-index: 1
-            position: absolute
-            right: 3%
-            top: 3%
-            a, button
-                border: none
-                background-color: Transparent
-                color: white
-                text-decoration: none
-                text-transform: uppercase
-                margin-left: 10px
-                font-family: "Work Sans"
-                font-weight: 800
-                line-height: 60%
-                letter-spacing: 1.5px
-                font-size: 100%
-                &:hover
-                    text-decoration: underline
-            button:focus
-                outline: none
         ul
             width: 100%
             padding: 0
@@ -42,36 +31,44 @@ body,html
                 height: 100%
                 width: 100%
                 display: inline-block
-                background-size: 100% 100%
                 &:nth-of-type(1)
-                    background-image: url(../images/slider/1.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/1.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(2)
-                    background-image: url(../images/slider/2.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/2.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(3)
-                    background-image: url(../images/slider/3.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/3.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(4)
-                    background-image: url(../images/slider/4.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/4.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(5)
-                    background-image: url(../images/slider/5.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/5.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(6)
-                    background-image: url(../images/slider/6.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/6.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(7)
-                    background-image: url(../images/slider/7.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/7.jpg)
+                    background-size: 100% 100%
                 &:nth-of-type(8)
-                    background-image: url(../images/slider/8.jpg)
-    .godown
-        height: 200px
-        display: block
-        background-color: #545F66
-        button
-            display: block
-            background-image: url(../images/arrows.png)
-            width: 64px
-            height: 64px
-            background-size: contain
-            margin: auto auto
-            background-color: transparent
-            border: none
-            cursor: pointer
-            &:focus
-                outline: none
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/8.jpg)
+                    background-size: 100% 100%
+    button
+        animation:
+            name: bounce
+            duration: 3.5s
+            iteration-count: infinite 
+        width: 32px
+        height: 32px
+        background-color: black
+        position: absolute
+        left: 50%
+        transform: translate(-16px)        
+        bottom: 0%
+        border: none
+        background:
+            image: url(../images/down-arrow.png)
+            size: 100% 100%
+            color: transparent
