--- a/src/index/index.pug
+++ b/src/index/index.pug
@@ -6,86 +6,66 @@ html
         link(href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet")
     body
-        .container
-            .landing
-                .slider
-                    .nav
-                        button suveniri
-                        button modeliranje
-                        a(href="#galerija", target="_blank") galerija
-                        button kontakt
-                    ul
-                        li
-                        li
-                        li
-                        li
-                        li
-                        li
-                        li
-                        li
-            .navigation
-                button.clicked suveniri
-                button modeliranje
+        .nav
+            img(src="images/logo.png")
+            .links
+                a(href="#home") Home
+                a(href="#galerija", target="_blank") galerija
                 button kontakt
-            .presentation#suveniri
-                .cover
-                    ul
-                        li#suveniri1
-                            img(src="images/suveniri/1.jpg")
-                        li#suveniri2
-                            img(src="images/suveniri/2.jpg")
-                        li#suveniri3
-                            img(src="images/suveniri/3.jpg")
-                        li#suveniri4
-                            img(src="images/suveniri/4.jpg")
-                .gallery
-                    button(data-id="suveniri1").item
-                    button(data-id="suveniri2").item
-                    button(data-id="suveniri3").item
-                    button(data-id="suveniri4").item
-                    a(href="#galerija", target="_blank").item
-                        .galerija
-                            h2 Galerija
-                            h2 Suvenira
-                            img(src="images/right-arrow.png", alt="")
-            .presentation#modeliranje
-                .cover
-                    ul
-                        li#modeliranje1
-                            img(src="images/modeliranje/1.jpg")
-                        li#modeliranje2
-                            img(src="images/modeliranje/2.jpg")
-                        li#modeliranje3
-                            img(src="images/modeliranje/3.jpg")
-                        li#modeliranje4
-                            img(src="images/modeliranje/4.jpg")
-                    .contact#kontakt
-                        .biggerblock    
-                            .block
-                                h2 Suveniri:
-                                h3 Danijela 0669602144
-                            .block    
-                                h2 Modeliranje:
-                                h3 Zoran 0644735719
-                        .block
-                            h2 Radno Vreme
-                            h3 9:00 - 21:00
-                .gallery
-                    button(data-id="modeliranje1").item
-                    button(data-id="modeliranje2").item
-                    button(data-id="modeliranje3").item
-                    button(data-id="modeliranje4").item
-                    a(href="#galerija", target="_blank").item
-                        .galerija
-                            h2 Galerija
-                            h2 Modela
-                            img(src="images/right-arrow.png", alt="")
-            .contactus
-                .info
-                    .contactblock
+                .contact
+                    .contactbox
                         h2 Suveniri:
-                        h3 Danijela 0669602144
-                    .contactblock
+                        p Danijela 0669602144
+                        p Danijela
+                    .contactbox
                         h2 Modeliranje:
-                        h3 Zoran 0644735719
-                    button
+                        p Zoran 0644735719
+                    button#exit
+        .landing
+            .slider
+                ul
+                    li
+                    li
+                    li
+                    li
+                    li
+                    li
+                    li
+                    li
+            button
+        .presentation
+            .text
+                h1 Galerija
+                p Lorem ipsum dolor sit amet
+            .buttons
+                button.clicked Sve
+                button Suveniri
+                button Modeli
+            .pictures
+                .imgbox
+                    img(src="./images/suveniri/1.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/modeliranje/1.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/suveniri/2.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/modeliranje/2.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/suveniri/3.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/modeliranje/3.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/modeliranje/4.jpg")
+                    button.show
+                .imgbox
+                    img(src="./images/suveniri/4.jpg")
+                    button.show
+            button.exit Prikaži više
+    script.
+        document.write('<style>.contact { display: none; }</style>');
